--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a      href="https://sanatanindia.co/store/1/delivery"   class="nav-link">Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="/contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
         </nav>
