--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </div>
     </header>
     <!-- header ends -->
-  
+
     <!-- culinary delight ends -->
     <footer>
         <div class="container">
@@ -55,17 +55,31 @@
             </div>
             <div class="footer-content">
                 <div class="footer-content-about animate-top">
+                    <br />
                     <h4>
-                        Contact Us
+                        About  Us
                     </h4>
-                    <div class="asterisk">
-                        <i class="fas fa-asterisk"></i>
-                        <img src="images/41286733-02b1-4b84-a1ef-d05b6567b960.jfif">
-                    </div>
-                    <p>
-                        Legal Business name- Sanatan India
-
-                        Address- Shop No. 53, HUDA Market, Sector 15-II, Gurgaon , Haryana -122001
+              
+                   <h1>
+                    ‘Sanatan India’ is a retail chain established in 2016 serving consumers across Delhi NCR with nutritional grains
+                    according to their body requirements.
+                    </h1>
+                    <br />
+                  <h2> Products for health</h2>
+                  <p>
+                    We pick crops from the place of origin. It tastes better because of soil and climatic conditions.
+                    </p>
+                    <br />
+                  <h2>  One-stop Solution</h2>
+                  <p>
+                    From Gharat ka atta (Cold-pressed flour) to healthy oats, we offer more than 100 products, including gluten-free flours,
+                    digestive attas , wholesome rice , premium pulses and home made spices and much more.
+                    </p>
+                    <br />
+                  <h2>  Only Fresh</h2>
+                  <p>
+                    We believe in serving only fresh products as per the harvesting cycle. Our atta is freshly ground, packed, and delivered
+                    to your doorstep.
                     </p>
                 </div>
                 <div class="footer-content-divider animate-bottom">
