--- a/index.html
+++ b/index.html
@@ -30,19 +30,14 @@
                     <a href="/index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Menu</a>
+                    <a href="/about.html" class="nav-link">About Us</a>
                 </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Reservation</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">News</a>
-                </li>
+              
                 <li class="nav-item">
                     <a      href="https://sanatanindia.co/store/1/delivery"   class="nav-link">Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/contact.html" class="nav-link">Contact</a>
+                    <a href="/contact.html" class="nav-link">Contact Us</a>
                 </li>
             </ul>
         </nav>
@@ -93,7 +88,7 @@
                 according to their body requirements.
                 
                 </p>
-<a href="#" class="body body-btn">About us</a>
+<a href="/about.html" class="body body-btn">About us</a>
             </div>
             <div class="restaurant-info-img animate-right">
                 <img src="images/1b3ce9dc-e6e5-441d-a7f6-2d0a84500c35__1_-removebg-preview.png" alt="">
