--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="facebook-domain-verification" content="ph54ux0jb2o01dgulhscjmbclfkfwj" />
     <title>Sanatan India</title>
     <!--Font awesome CDN-->
     <script src="https://kit.fontawesome.com/8f69ab07e3.js" crossorigin="anonymous"></script>
